fixed github check