@@ -1,5 +1,6 @@
 package mate.academy.spring.mapper.impl.response;
 
+import java.util.stream.Collectors;
 import mate.academy.spring.mapper.DtoResponseMapper;
 import mate.academy.spring.model.ShoppingCart;
 import mate.academy.spring.model.Ticket;
@@ -13,7 +14,10 @@ public class ShoppingCartResponseMapper
     @Override
     public ShoppingCartResponseDto toDto(ShoppingCart object) {
         return new ShoppingCartResponseDto(
-                object.getTickets().stream().map(Ticket::getId).toList(),
+                object.getTickets()
+                        .stream()
+                        .map(Ticket::getId)
+                        .collect(Collectors.toList()),
                 object.getUser().getId());
     }
 }
